[metadata]
name = pyatproto
version = 0.1
author = capjamesg
author_email = jamesg@jamesg.blog
description =  A wrapper for interacting with the AT Protocol API.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/capjamesg/pyatproto
project_urls =
    Bug Tracker = https://github.com/capjamesg/pyatproto/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src